adding new file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,6 +5,5 @@ password = rajqa@123
 headless = false
 incognito = false
 highlight = true
-
 remote=false
-huburl=
+huburl=http://localhost:4444/wd/hub
